<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/display_content"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="right|center"
            android:paddingRight="20dp"
            android:text=""
            android:singleLine="true"
            android:ellipsize="start"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/display_sum"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:gravity="right|bottom"
            android:paddingRight="20dp"
            android:text="0"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="45dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="#686868" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/button_20"
                style="@style/calcu_button_super"
                android:text="@string/button_20" />

            <Button
                android:id="@+id/button_19"
                style="@style/calcu_button_f"
                android:text="@string/button_19" />
            <Button
                android:id="@+id/button_18"
                style="@style/calcu_button_f"
                android:text="@string/button_18" />

            <Button
                android:id="@+id/button_17"
                style="@style/calcu_button_f"
                android:text="@string/button_17" />

            <Button
                android:id="@+id/button_16"
                style="@style/calcu_button_f"
                android:text="@string/button_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/button_21"
                style="@style/calcu_button_super"
                android:text="@string/button_21" />

            <Button
                android:id="@+id/button_08"
                style="@style/calcu_button"
                android:text="@string/button_08" />

            <Button
                android:id="@+id/button_09"
                style="@style/calcu_button"
                android:text="@string/button_09" />

            <Button
                android:id="@+id/button_10"
                style="@style/calcu_button"
                android:text="@string/button_10" />

            <Button
                android:id="@+id/button_15"
                style="@style/calcu_button_f"
                android:text="@string/button_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/button_22"
                style="@style/calcu_button_super"
                android:text="@string/button_22" />

            <Button
                android:id="@+id/button_05"
                style="@style/calcu_button"
                android:text="@string/button_05" />

            <Button
                android:id="@+id/button_06"
                style="@style/calcu_button"
                android:text="@string/button_06" />

            <Button
                android:id="@+id/button_07"
                style="@style/calcu_button"
                android:text="@string/button_07" />

            <Button
                android:id="@+id/button_14"
                style="@style/calcu_button_f"
                android:text="@string/button_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/button_23"
                style="@style/calcu_button_super"
                android:text="@string/button_23" />

            <Button
                android:id="@+id/button_02"
                style="@style/calcu_button"
                android:text="@string/button_02" />

            <Button
                android:id="@+id/button_03"
                style="@style/calcu_button"
                android:text="@string/button_03" />

            <Button
                android:id="@+id/button_04"
                style="@style/calcu_button"
                android:text="@string/button_04" />

            <Button
                android:id="@+id/button_13"
                style="@style/calcu_button_f"
                android:text="@string/button_13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/button_more"
                style="@style/calcu_button_f"
                android:textFontWeight="200"
                android:text="@string/button_more" />

            <Button
                android:id="@+id/button_24"
                style="@style/calcu_button_super"
                android:text="@string/button_24" />

            <Button
                android:id="@+id/button_01"
                style="@style/calcu_button"
                android:text="@string/button_01" />

            <Button
                android:id="@+id/button_11"
                style="@style/calcu_button"
                android:text="@string/button_11" />

            <Button
                android:id="@+id/button_12"
                style="@style/calcu_button_sum"
                android:text="@string/button_12" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>